--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "spank": "^1.7.0",
     "svelte": "^3.35.0",
     "svelte-preprocess": "^4.6.9",
-    "vite": "^2.0.5"
+    "vite-monorepo": "github:GrygrFlzr/vite"
   },
   "routify": {
     "extensions": [
